RESOLVED FIXED164838
UnlinkedCodeBlock should not have a starting line number
https://bugs.webkit.org/show_bug.cgi?id=164838
Summary UnlinkedCodeBlock should not have a starting line number
Geoffrey Garen
Reported 2016-11-16 15:28:03 PST
UnlinkedCodeBlock should not have a starting line number
Attachments
Patch (6.28 KB, patch)
2016-11-16 15:36 PST, Geoffrey Garen
mark.lam: review+
Geoffrey Garen
Comment 1 2016-11-16 15:36:08 PST
Mark Lam
Comment 2 2016-11-16 15:39:50 PST
Comment on attachment 294985 [details] Patch r=me
Saam Barati
Comment 3 2016-11-16 15:42:46 PST
LGTM
Geoffrey Garen
Comment 4 2016-11-16 17:02:11 PST
Note You need to log in before you can comment on or make changes to this bug.